[package]
name = "vt-lens"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "A minimal native lens for understanding local process and network activity."

[dependencies]
eframe = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }
